============================================================================
OpenPAM Cinnamon						2002-05-02

 - ENHANCE: Add a null conversation function, openpam_nullconv().

 - BUGFIX: Various markup bugs in the documentation.

 - BUGFIX: Document <security/openpam.h>.

 - BUGFIX: Duplicate expansion of openpam_log() macro arguments.

 - ENHANCE: Restructure the policy-loading code and align our use of
   the "other" policy with Solaris and Linux-PAM.

 - ENHANCE: Log dlopen() and dlsym() failures.

 - ENHANCE: In openpam_ttyconv(), emit a newline after error and info
   messages unless the message contains one already.

 - BUGFIX: In pam_vprompt(), initialize the response pointer to NULL
   so we can detect whether the conversation function touched it.
============================================================================
OpenPAM Cineraria						2002-04-14

 - BUGFIX: Fix confusion between token and prompt in
   pam_get_authtok(3).

 - ENHANCE: Improved documentation.

 - ENHANCE: Adopt the same preprocessor tricks that were used in
   FreeBSD's version of Linux-PAM to simplify static linking without
   requiring dummy primitives.

 - ENHANCE: Move the policy-loading code out of pam_start.c.

 - BUGFIX: Fix typo in one of the versions of the openpam_log macro.

 - ENHANCE: Add versioning macros.
============================================================================
OpenPAM Cinchona						2002-04-08

 - ENHANCE: Improved documentation for several API functions.

 - BUGFIX: Fix bug in pam_set_data() that would result in corruption
   of the module data list.

 - BUGFIX: Allocate the correct amount of memory for the environment
   list in pam_putenv().

 - ENHANCE: Change pam_get_authtok()'s prototype so the caller can
   specify what token it wants.  Also introduce PAM_OLDAUTHTOK_PROMPT.

 - BUGFIX: Plug memory leak in pam_get_user() / pam_get_authtok(), and
   reduce differences between these very similar functions.
